@@ -185,7 +185,8 @@ latex_documents = [
    u'Francesc Alted', 'manual'),
 ]
 
-latex_appendices = ['defaults']
+# Appendices only appear in the latex output, so bad luck
+#latex_appendices = ['defaults']
 
 # The name of an image file (relative to this directory) to place at the top of
 # the title page.
